added GET method to /keys route, added basic auth, updated all tests, updated openapi specs, updated .env.EXAMPLE, added new container with unit tests, updated requirements.txt, updated readme.md, updated both docker compose local and production
